resources/public/style.css
/* ... */
.popup ul.popup-actions li:not(.separator):active {
    background-color: #f8f8f8;
}

.popup-timestamp-header {
    margin: 0;
    padding: 8px 0;
    border-bottom: 1px solid #000;
    text-align: center;
    color: #aaa;
}

/* Settings tweaks */
#bubble-position {
    width: 0;
    grid-template: repeat(2, 1fr) / repeat(2, .5fr);
    display: grid;
}

#bubble-position label {
    position: relative;
    width: 55px;
    height: 30px;
}

#bubble-position label > input {
    visibility: hidden;
}

#bubble-position label > div {
    position: absolute;
    top: 0;
    left: 0;
    width: inherit;
    height: inherit;
    border: 1px solid #797979;
}

#bubble-position label:hover > div {
    border: 2px solid #6495ED;
}

#bubble-position label input:checked ~ div {
    background-color: #eee;
}

/* Chat settings tweaks */
.chat-settings-wrapper label {
    display: block;
    cursor: pointer;
    user-select: none;
    margin: 6px 0;
}

.chat-settings-wrapper input:not([type=checkbox]) {
    border: 1px solid #888;
}

/* Notifications */
.notification {
    margin: 15px 10px;
    border-radius: 5px;
    background-color: #f5f5f5;
    border: 1px solid #8f8f8f;
}

.notification .notification-title {
    height: 2rem;
    line-height: 2rem;
    font-size: 1.25rem;
    font-weight: bold;
    text-align: center;
    white-space: pre;
    overflow: hidden;
    border-radius: 4px 4px 0 0;
    background-color: #b8b8b8;
    border-bottom: 1px solid #8f8f8f;
}

.notification .notification-footer {
    height: 2rem;
    line-height: 2rem;
    font-size: .75rem;
    font-weight: bold;
    font-style: italic;
    text-align: right;
    color: #666;
    white-space: pre;
    overflow: hidden;
    border-radius: 0 0 4px 4px;
    background-color: #d6d6d6;
    border-top: 1px solid #8f8f8f;
    padding-right: .5rem;
}

.notification .notification-body {
    padding: 10px 5px;
    word-break: break-word;
    white-space: pre-wrap;
}

.notification-footer .notification-expiry {
    cursor: default;
    color: #b66;
    float: left;
    margin-left: .5rem;
}

/*//////////////////////////*\
| Modal
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/
/* https://github.com/kylefox/jquery-modal/blob/a8b9c9b01961c0a3c6676fcc8fe6cc5b8c74cb5c/jquery.modal.css */
.blocker {
    z-index: 99;
    padding: 0;
}

.modal {
    z-index: 100;
    width: initial;
    min-width: 10vw;
    max-width: 97vw;
    max-height: 99vh;
    background-color: #f5f5f5;
    padding: 0;
    outline: 0;
}

.modal .modal-footer {
    text-align: right;
}

.modal .close-modal {
    outline: none;
}

.modal .modal-header, .modal .modal-footer {
    margin: 0;
    padding: 5px 7px;
    min-height: 2em;
    background-color: #b8b8b8;
}

.modal .modal-header {
    border-radius: 8px 8px 0 0;
}

.modal .modal-footer {
    border-radius: 0 0 8px 8px;
}

.modal .modal-body {
    padding: 15px 10px;
    max-width: 98vw;
    max-height: 88vh;
    overflow: auto;
}

.modal-title {
    text-align: center;
}

.modal-footer .button {
    margin: 0 0 0 5px;
}

.modal-header h1, .modal-header h2, .modal-header h3, .modal-header h4, .modal-header h5, .modal-header h6,
.modal-footer h1, .modal-footer h2, .modal-footer h3, .modal-footer h4, .modal-footer h5, .modal-footer h6
/*.modal-body p*/ {
    margin: 0;
    padding: 0;
}

/*//////////////////////////*\
| Mobile Styles
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

.mobile-only {
    display: none;
}

@media (max-width: 1500px) {
    #donate, #donate > * {
        max-width: 300px;
    }
}

@media (max-width: 768px) {
    .modal {
        min-width: 1vw;
        max-width: 95vw;
    }

    .mobile-only {
        display: initial;
    }

    .palette {
        width: 100%;
    }

    #drawers-opener {
        display: inline-block;
    }

    .drawer > .open {
        display: none;
    }

    .drawer, .drawer > .drawer-content {
        z-index: 20;
        width: 100vw;
        height: 100vh;
    }

    .drawer.open, .drawer.open > .drawer-content {
        position: fixed;
        left: 0;
        top: 0;
    }

    .drawer-content > div:not(.close) {
        border: 1px solid #fff;
    }

    .message {
        max-width: 100%;
        max-height: 100%;
        overflow: auto;
        width: 95%;
    }

    .panel, .panel.half-width {
        max-width: 100% !important;
        width: 100% !important;
    }

    .panel.left {
        left: -105%;
    }

    .panel.right {
        right: -105%;
    }

    body.panel-open #ui {
        right: initial;
        width: initial;
        transition: none;
    }

    #ui #main-bubble {
        top: 4rem;
        bottom: initial;
        left: 1rem;
        right: initial;
    }

    #bubble-position {
        opacity: .5;
    }

    #chat-hint {
        font-size: .7rem;
    }

    #chat-ratelimit {
        font-size: 1rem;
    }

    #jump-to-bottom {
        line-height: 2rem;
        font-size: 1.25rem;
        top: -2rem;
    }

    .halves .side {
        flex: 1 0 100%;
    }

    .chat-lookup-side {
        max-height: initial;
    }
}

